@@ -1,3 +1,8 @@
+2004-03-03  Andras Varga
+
+	* added "Default style" in Gnuplot options dialog; user interface 
+	refinements.
+
 2004-02-04  ------ omnetpp-3.0pre1 released ------
 
 2003-08-30 Andras Varga
